<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="View preferences">

        <SwitchPreferenceCompat
            app:key="vibration"
            app:title="Haptic vibration"
            app:summaryOff="No vibration in the app"
            app:summaryOn="Each press returns a small vibration"/>

        <SwitchPreferenceCompat
            app:key="contrast"
            app:title="High Contrast"
            app:summary="High contrast mode makes it easier for some users to read text in the app" />


    </PreferenceCategory>
    <PreferenceCategory app:title="@string/messages_header">

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>